--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
     "lucide-react": "^0.554.0",
+    "motion": "^12.23.26",
     "next": "16.0.3",
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.11",
